--- a/src/header/Header.css
+++ b/src/header/Header.css
@@ -1,4 +1,64 @@
 .navlink{
-    color:black;
+    color:rgb(3, 3, 3);
     text-decoration: none;
+    background-color: none;
+}
+*{
+    box-sizing: border-box;
+}
+.header{
+    margin: 0;
+}
+.header__desktopVersion{
+    display: flex;
+    width: 100%;
+    height: 100%;
+    justify-content: space-around;
+    align-items: center;
+}
+li{
+    margin: 1rem;
+}
+ul{
+    display: flex;
+    justify-content: center;
+    align-items: center;
+}
+a{
+    display: block;
+    position: relative;
+    text-decoration: none;
+    color: #000000;
+    padding: 0.5em 0;
+
+}
+.anchorHeader::after {
+    content: '';
+    position: absolute;
+    bottom: 0;
+    left: 0;
+    width: 100%;
+    height: 0.1em;
+    background-color: rgb(0, 0, 0);
+    opacity: 0;
+    transition: opacity 300ms, transform 300ms;
+  }
+.anchorHeader:hover,
+.anchorHeader::after {
+  opacity: 1;
+  color: green;
+}
+
+li .anchorHeader {
+    overflow: hidden;
+  }
+  
+li .anchorHeader::after {
+    opacity: 1;
+    transform: translate3d(-100%, 0, 0);
+  }
+  
+li .anchorHeader:hover::after,
+li .anchorHeadera:focus::after{
+    transform: translate3d(0, 0, 0);
 }
