--- a/src/components/header/Header.css
+++ b/src/components/header/Header.css
@@ -1,19 +1,23 @@
 .navlink{
     color:rgb(3, 3, 3);
     text-decoration: none;
-    background-color: none;
+    padding-left: 5rem;
+}
+.navBar{
+    padding-right: 5rem;
 }
 *{
     box-sizing: border-box;
 }
 .header{
+    height: 5rem;
     margin: 0;
 }
 .header__desktopVersion{
     display: flex;
     width: 100%;
     height: 100%;
-    justify-content: space-around;
+    justify-content: space-between;
     align-items: center;
 }
 li{
@@ -23,6 +27,7 @@ ul{
     display: flex;
     justify-content: center;
     align-items: center;
+    list-style-type: none;
 }
 a{
     display: block;
@@ -46,7 +51,7 @@ a{
 .anchorHeader:hover,
 .anchorHeader::after {
   opacity: 1;
-  color: green;
+  color: #1B4015;
 }
 
 li .anchorHeader {
