--- a/src/components/hero/Hero.module.css
+++ b/src/components/hero/Hero.module.css
@@ -1,8 +1,9 @@
 .hero__Container{
     width: 100%;
     height: 100%;
+    grid-column: 1/3;
     display: flex;
-    padding: 0 2rem 0 2rem;
+    padding: 0 5rem;
     justify-content: center;
     align-items: center;
     flex-direction: column;
@@ -16,8 +17,13 @@
     text-align: justify;
 }
 .hero__caption span{
-    color: green;
+    color: #091E06;
+    
 }
+.hero__caption span{
+    color: #1B4015
+}
+
 .hero__nameSpan{
-    color:green
+    color:#1B4015
 }
