--- a/src/components/pages/principal.module.css
+++ b/src/components/pages/principal.module.css
@@ -1,4 +1,25 @@
 .heroMainContainer{
     width: 100%;
     height: 100%;
+    padding-top: 2rem;
+}
+
+.contentHero__Container{
+    display:grid;
+    grid-template-columns: 1fr 1fr 1fr 1fr;
+    grid-template-rows: 1fr 1fr;
+}
+.Main__Tecnolog{
+    grid-row: 2/3;
+    grid-column: 1/3;
+    display: flex;
+    justify-content: center;
+    align-items: flex-end;
+}
+.Main__Portafolio{
+    flex-direction: column;
+    grid-column: 3/5;
+    grid-row: 1/3;
+    display: flex;
+    align-items: center;
 }
