footer and style

--- a/src/components/footer/Footer.css
+++ b/src/components/footer/Footer.css
@@ -5,7 +5,7 @@
     justify-content: space-between;
     align-content: center;
 }
-.textoAutor__footerContainer{
+.info_container{
     color: #585858;
     padding-left: 5rem;
 }
