--- a/src/components/ProyectCard/ProyectCard.module.css
+++ b/src/components/ProyectCard/ProyectCard.module.css
@@ -1,8 +1,31 @@
-.unordenedList{
-    flex-direction: column;
+.ProyectCard_Container{
+    display: grid;
+    grid-template-columns: 10% 80% 10%;
+    width: 100%;
+    height: 100%;
+    transition: 1s 40ms;
 }
-
-
+/*  .ProyectCard_Container:not(:hover) > .arrowRight_container,.arrowLeft_container{
+    width: 0px;
+    transition: 0.5s 40ms ease-in-out;
+}
+.ProyectCard_Container:hover > .arrowRight_container,.arrowLeft_container{
+    width: 60px;
+    transition: 0.5s 40ms ease-in-out;
+} */
+.img{
+    width: 100%;
+    height: 100%;
+    max-height: 350px;
+    grid-column: 2/3;
+}
+.arrowRight_container,.arrowLeft_container{
+    height: auto;
+    width: auto;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+}
 /* @media only screen and (min-width: 48em) {...} */
 
 /* @media only screen and (min-width: 64em) {...} */
