--- a/src/components/pages/principal.module.css
+++ b/src/components/pages/principal.module.css
@@ -3,7 +3,9 @@
     height: 100%;
     padding-top: 2rem;
 }
-
+.proyects_Title{
+    margin-bottom: 1rem;
+}
 .contentHero__Container{
     display:grid;
     grid-template-columns: 1fr 1fr 1fr 1fr;
@@ -14,12 +16,20 @@
     grid-column: 1/3;
     display: flex;
     justify-content: center;
-    align-items: flex-end;
+    flex-direction: column;
+    margin-left: 5rem;
+}
+.techStack__title{
+    padding-bottom: 1.1rem;
+}
+.stackicons{
+    margin-right: 1rem;
 }
 .Main__Portafolio{
     flex-direction: column;
     grid-column: 3/5;
     grid-row: 1/3;
     display: flex;
+    margin-right: 5rem;
     align-items: center;
 }
