--- a/src/components/ProyectCard/ProyectCard.module.css
+++ b/src/components/ProyectCard/ProyectCard.module.css
@@ -1,9 +1,53 @@
 .ProyectCard_Container{
     display: grid;
     grid-template-columns: 10% 80% 10%;
+    grid-template-rows: 100%;
+    height: 350px;
+    place-items: center;
+    transition: 1s 40ms;
+}
+.content__container{
+    display: grid;
+    box-sizing: border-box;
+    place-items: center;
+    grid-template-areas: 1fr;
+}
+.content__container .img{
+    grid-area: 1/1;
+}
+.content__container .vermas__btnContainer{
+    grid-area: 1/1;
+}
+.img .vermas__btnContainer{
+    grid-area: 1;
+   /*  place-items: center; */
+    justify-content: center;
+    align-items: center;
+}
+
+.vermas__btnContainer{
+    right: 1px;
+    z-index: 2;
+    color: white;
+    width: 4.4rem;
+    height: 2rem;
+    border-radius: 5%;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    background-color: rgb(84, 64, 104);
+}
+.img{
     width: 100%;
     height: 100%;
-    transition: 1s 40ms;
+    z-index: 1;
+    max-height: 350px;
+}
+.arrowRight_container{
+    grid-column: 3/4;
+}
+.arrowRight_container{
+    grid-column: 3/4;
 }
 /*  .ProyectCard_Container:not(:hover) > .arrowRight_container,.arrowLeft_container{
     width: 0px;
@@ -13,19 +57,37 @@
     width: 60px;
     transition: 0.5s 40ms ease-in-out;
 } */
-.img{
-    width: 100%;
-    height: 100%;
-    max-height: 350px;
-    grid-column: 2/3;
-}
+/* .img,.vermas__btnContainer{
+    grid-row: 1/2;
+} */
+
 .arrowRight_container,.arrowLeft_container{
     height: auto;
     width: auto;
     display: flex;
     justify-content: center;
     align-items: center;
+    user-select: none;
+    -webkit-user-select: none;
+    -moz-user-select: none;
+    -ms-user-select: none;
+    -khtml-user-select: none;
 }
+/* .arrowLeft_container {
+    grid-column: 1/2;
+}
+.arrowRight_container{
+    grid-column: 3/4;
+    grid-row: 1/3;
+}
+/* .vermas__btnContainer{
+    background-color: blue;
+    width: 4ssrem;
+    display: flex;
+    justify-content: centera;
+    align-items: center;
+    height: 4rem;
+} */ 
 /* @media only screen and (min-width: 48em) {...} */
 
 /* @media only screen and (min-width: 64em) {...} */
