--- a/src/components/header/Header.css
+++ b/src/components/header/Header.css
@@ -1,11 +1,6 @@
 .navlink{
     color:rgb(3, 3, 3);
     text-decoration: none;
-    padding-left: 5rem;
-    
-}
-.navBar{
-    padding-right: 5rem;
 }
 *{
     box-sizing: border-box;
@@ -18,6 +13,8 @@
     display: flex;
     width: 100%;
     height: 100%;
+    padding: 0 5rem;
+    overflow-x: hidden;
     justify-content: space-between;
     align-items: center;
 }
@@ -37,6 +34,14 @@ a{
     color: #000000;
     padding: 0.5em 0;
 
+}
+.header__mobileVersion--container{
+  display: none;
+  width: 100%;
+  height: 100%;
+}
+.header_mobileVersion--Content{
+  display: none;
 }
 .anchorHeader::after {
     content: '';
@@ -68,3 +73,126 @@ li .anchorHeader:hover::after,
 li .anchorHeadera:focus::after{
     transform: translate3d(0, 0, 0);
 }
+
+.vbp-header-menu-button__svg {
+  display: none;
+    width: 30px;
+    height: 30px;
+    cursor: pointer;
+    transform: scaleX(-1);
+  }
+  
+  .vbp-header-menu-button__svg line {
+    stroke: #192a6b;
+    stroke-dasharray: 100%;
+    stroke-dashoffset: 0%;
+    transition: transform 0.3s, stroke-dashoffset .4s;
+    transform-origin: center;
+    stroke-width: 3px;
+  }
+  
+  .vbp-header-menu-button__svg .top {
+    transform: translateY(-35%);
+    -webkit-transform: translateY(-35%);
+    -moz-transform: translateY(35%);
+    -ms-transform: translateY(35%);
+    -o-transform: translateY(35%);
+  }
+  
+  .vbp-header-menu-button__svg .middle {
+    transform: scaleX(1);
+    -webkit-transform: scaleX(1);
+    -moz-transform: scaleX(1);
+    -ms-transform: scaleX(1);
+    -o-transform: scaleX(1);
+    transition: opacity .3s, transform .3s;
+    -webkit-transition: opacity .3s, transform .3s;
+    -moz-transition: opacity .3s, transform .3s;
+    -ms-transition: opacity .3s, transform .3s;
+    -o-transition: opacity .3s, transform .3s;
+  
+  }
+  
+  .vbp-header-menu-button__svg .bottom {
+    transform: translateY(33%);
+    -webkit-transform: translateY(33%);
+    -moz-transform: translateY(33%);
+    -ms-transform: translateY(33%);
+    -o-transform: translateY(33%);
+    stroke-dasharray: 100%;
+    stroke-dashoffset: 9px;
+  }
+  .vbp-header-menu-button__svg:hover .bottom {
+    stroke-dashoffset: 0%;
+  }
+  /*** Mode Croix ***/
+  body.menu-open .vbp-header-menu-button__svg .top {
+    transform: rotate(45deg);
+    -webkit-transform: rotate(45deg);
+    -moz-transform: rotate(45deg);
+    -ms-transform: rotate(45deg);
+    -o-transform: rotate(45deg);
+    stroke-linecap: round;
+  }
+  
+  body.menu-open .vbp-header-menu-button__svg .middle {
+    transform: scaleX(0.1);
+    -webkit-transform: scaleX(0.1);
+    -moz-transform: scaleX(0.1);
+    -ms-transform: scaleX(0.1);
+    -o-transform: scaleX(0.1);
+    opacity: 0;
+  }
+  
+  body.menu-open .vbp-header-menu-button__svg line.bottom {
+    transform: rotate(-45deg);
+    -webkit-transform: rotate(-45deg);
+    -moz-transform: rotate(-45deg);
+    -ms-transform: rotate(-45deg);
+    -o-transform: rotate(-45deg);
+    stroke-linecap: round;
+  }
+  
+  body.menu-open .vbp-header-menu-button__svg .bottom {
+    stroke-dashoffset: 0%;
+  }
+
+  @media (max-width: 599px) {
+    .header{
+      padding: 3rem 3rem 0 3rem;
+    }
+    .header__desktopVersion{
+      display: none;
+    }
+    .navlink{
+      padding: 0;
+    }
+    .header__mobileVersion--container{
+      display: none;
+      width: 100%;
+      padding: 2rem;
+      display: flex;
+      justify-content: space-between;
+      align-items: center;
+    }
+    .header_mobileVersion--Content{
+      display: block;
+      /* background: white; */
+      backdrop-filter: blur(12px);
+      width: 100%;
+      height: 100%;
+      padding: 0;
+      left: 1440px;
+      transition: 0.4s 10ms ease-in-out;
+      position: absolute;
+      display: flex;
+      z-index: 4;
+    }
+    .activeModal{
+      left:0;
+      transition: 0.5s 10ms ease-in-out;
+    }
+    .vbp-header-menu-button__svg {
+      display: block;
+    }
+  }
