--- a/src/components/main/main.module.css
+++ b/src/components/main/main.module.css
@@ -1,10 +1,14 @@
 .main{
-    height: auto;
+    display: flex;
+    justify-content: center;
+    align-items: center;
     margin-bottom: 1.5rem;
+    height: 75vh;
 }
 
 @media (max-width: 599px){
     .main{
         height: auto;
+        height: 132vh;
     }
 }
