--- a/src/components/pages/principal.module.css
+++ b/src/components/pages/principal.module.css
@@ -38,3 +38,28 @@
     margin-right: 5rem;
     align-items: center;
 }
+
+@media (max-width:599px){
+    .contentHero__Container{
+        grid-template-rows: repeat(3, 1fr);
+    }
+    .contentHero__Container{
+        padding: 2rem;
+    }
+    .Main__Portafolio{
+        grid-column: 1/5;
+        grid-row: 2/3;
+        margin: 0;
+    }
+    .Main__Tecnolog{
+        grid-column: 1/5;
+        grid-row: 3/4;
+        margin:0
+    }
+    .heroMainContainer{
+        padding-top: 0;
+    }
+    .contentHero__Container{
+        padding-top: 0;
+    }
+}
