--- a/src/components/main/main.module.css
+++ b/src/components/main/main.module.css
@@ -3,7 +3,7 @@
     justify-content: center;
     align-items: center;
     margin-bottom: 1.5rem;
-    height: 78vh;
+    height: auto;
 }
 
 @media (max-width: 599px){
