--- a/src/components/ProyectCard/ProyectCard.module.css
+++ b/src/components/ProyectCard/ProyectCard.module.css
@@ -42,6 +42,7 @@
     height: 100%;
     z-index: 1;
     max-height: 350px;
+    user-select: none;
 }
 .arrowRight_container{
     grid-column: 3/4;
