--- a/src/components/pages/principal.module.css
+++ b/src/components/pages/principal.module.css
@@ -3,6 +3,7 @@
     height: 100%;
     padding-top: 2rem;
     min-height: 74vh;
+
 }
 
 .proyects_Title{
@@ -43,6 +44,7 @@
 @media (max-width: 1280px){
     .heroMainContainer{
         padding-top: 8rem;
+        min-height: 80vh;
     }
 }
 @media(max-width:1050px){
