--- a/src/components/header/Header.css
+++ b/src/components/header/Header.css
@@ -83,7 +83,7 @@ li .anchorHeadera:focus::after{
   }
   
   .vbp-header-menu-button__svg line {
-    stroke: #192a6b;
+    stroke: #000000;
     stroke-dasharray: 100%;
     stroke-dashoffset: 0%;
     transition: transform 0.3s, stroke-dashoffset .4s;
